--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "keywords": [
     "react",
+    "redux",
     "es6",
     "webpack",
     "babel",
-    "sass"
+    "sass",
+    "material-ui"
   ],
   "author": "",
   "license": "",
@@ -22,7 +24,7 @@
   "scripts": {
     "dev": "webpack-dev-server --config=configs/webpack/dev --inline --hot",
     "build": "rm -f -r -d dist && webpack -p --config=configs/webpack/prod",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "jest": {
     "transform": {
@@ -36,39 +38,52 @@
     }
   },
   "devDependencies": {
-    "@material-ui/core": "^3.0.1",
+    "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
     "animejs": "^2.2.0",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^4.3.1",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "jest-css-modules": "^1.1.0",
     "jest-static-stubs": "0.0.1",
     "node-sass": "^4.9.3",
-    "react": "^16.4.2",
+    "react": "^16.5.1",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.4.2",
-    "react-hot-loader": "^4.3.4",
-    "react-test-renderer": "^16.5.0",
+    "react-dom": "^16.5.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.5.1",
     "react-youtube": "^7.6.0",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
-    "webpack": "^4.17.1",
+    "transform-runtime": "0.0.0",
+    "webpack": "^4.19.0",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.7",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-dev-server": "^3.1.8",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {}
