--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,16 @@
 {
   "presets": [
-    ["env", {"modules": false}], // webpack understands the native import syntax, and uses it for tree shaking
-    "react" // Transpile React components to JavaScript
+    ["env", {"modules": false}],
+    "react"
   ],
   "plugins": [
-    "react-hot-loader/babel", // Enables React code to work with HMR.
-    [
-      "module-resolver", {
-      "root": ["./src"]
-    }
-    ]
+    ["transform-decorators"],
+    ["module-resolver", {"root": ["./src"]}]
   ],
   "env": {
     "test": {
-      "presets": ["env", "react"],
-      "plugins": ["transform-es2015-modules-commonjs"]
+      "presets": ["env", "es2015", "react", "stage-2"],
+      "plugins": ["transform-decorators-legacy", "transform-es2015-modules-commonjs", "transform-object-rest-spread", "syntax-decorators"]
     }
   }
 }
