--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-material-design-icons": "^4.1.0",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
