--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "@material/textfield": "^3.2.0",
+    "@material/top-app-bar": "^3.2.0",
+    "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "ngx-infinite-scroll": "^8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "typicons.font": "^2.0.9",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
