--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material/top-app-bar": "^3.2.0",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "ngx-infinite-scroll": "^8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
