--- a/package.json
+++ b/package.json
@@ -4,5 +4,31 @@
   "main": "index.js",
   "repository": "https://github.com/gabriel-furquim/front-end-challenge.git",
   "author": "'Gabriel <'gabriel.furquim@outlook.com'>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@material-ui/core": "^4.5.0",
+    "axios": "^0.19.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "styled-components": "^4.4.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
+    "@types/axios": "^0.14.0",
+    "@types/enzyme": "^3.10.3",
+    "@types/jest": "^24.0.18",
+    "@types/material-ui": "^0.21.7",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "@types/styled-components": "^4.1.19",
+    "axios-mock-adapter": "^1.17.0",
+    "babel-jest": "^24.9.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.10.2",
+    "react-testing-library": "^8.0.1",
+    "typescript": "^3.6.3"
+  }
 }
