--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "jest": "^24.9.0",
     "react-test-renderer": "^16.10.2",
     "react-testing-library": "^8.0.1",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
+  },
+  "scripts": {
+    "test": "jest --watch"
   }
 }
