--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-scripts": "^3.2.0",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
@@ -33,6 +34,8 @@
     "typescript": "^3.6.3"
   },
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "jest --watch"
   }
 }
