--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "browserslist": {
     "production": [
