--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.0.0",
     "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
     "@types/material-ui": "^0.21.7",
     "@types/react": "^16.9.5",
@@ -27,6 +28,7 @@
     "babel-jest": "^24.9.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.2",
     "jest": "^24.9.0",
     "react-test-renderer": "^16.10.2",
     "react-testing-library": "^8.0.1",
