--- a/youtube-react-clone/package.json
+++ b/youtube-react-clone/package.json
@@ -10,23 +10,23 @@
     "@types/gapi.client.youtube": "^3.0.1",
     "@types/javascript-time-ago": "^2.0.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.54",
-    "@types/react": "^16.9.45",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
-    "javascript-time-ago": "^2.0.13",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
+    "@types/node": "^12.19.3",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
+    "javascript-time-ago": "^2.3.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.0",
     "react-waypoint": "^9.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.1.1",
-    "typescript": "^3.7.5"
+    "semantic-ui-react": "^1.3.1",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
